// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/divider/demo/horizontal.js correctly test 1`] = `
<div>
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo.
  </p>
  <div
    class="jc-divider jc-divider-horizontal"
  />
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo.
  </p>
  <div
    class="jc-divider jc-divider-horizontal jc-divider-with-text"
  >
    <span
      class="jc-divider-inner-text"
    >
      With Text
    </span>
  </div>
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo.
  </p>
  <div
    class="jc-divider jc-divider-horizontal jc-divider-dashed"
  />
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo.
  </p>
</div>
`;

exports[`renders ./components/divider/demo/orientation.js correctly test 1`] = `
<div>
  <div
    class="jc-divider jc-divider-horizontal jc-divider-with-text-left"
  >
    <span
      class="jc-divider-inner-text"
    >
      Left Text
    </span>
  </div>
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo.
  </p>
  <div
    class="jc-divider jc-divider-horizontal jc-divider-with-text-right"
  >
    <span
      class="jc-divider-inner-text"
    >
      Right Text
    </span>
  </div>
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nonne merninisti licere mihi ista probare, quae sunt a te dicta? Refert tamen, quo modo.
  </p>
</div>
`;

exports[`renders ./components/divider/demo/vertical.js correctly test 1`] = `
<div>
  Text
  <div
    class="jc-divider jc-divider-vertical"
  />
  <a
    href="#"
  >
    Link
  </a>
  <div
    class="jc-divider jc-divider-vertical"
  />
  <a
    href="#"
  >
    Link
  </a>
</div>
`;
